@@ -1,3 +1,4 @@
+* Remove mandatory on analytic roots
 * Remove positive constraint on debit/credit
 
 Version 5.0.0 - 2018-10-01
